# bug-pdm-pylock

./: README.md  pylock.toml  pyproject.toml
lib/: pyproject.toml
